# pico-pir-light-switch

./: CMakeLists.txt
src/: servo_pir.c
src/servo/: servo.c  servo.h
src/setup_pin/: setup_pin.c  setup_pin.h
